--- a/src/app/Components/carousel/carousel.component.html
+++ b/src/app/Components/carousel/carousel.component.html
@@ -29,5 +29,6 @@
 </ngb-carousel>
 
 <div class="div-boton-formulario">
-  <button class="btn-formulario" mat-raised-button (click)="openDialogEnviarDatos()">¡Registrá los datos de tu reserva!</button>
+  <button class="btn-formulario-nuevo" mat-raised-button (click)="openDialogEnviarDatos()">¡Registrá los datos de tu reserva!</button>
+  <button class="btn-formulario-existente" mat-raised-button (click)="openDialogBuscarReserva()">Tengo un código de reserva</button>
 </div>
