--- a/src/app/Components/carousel/carousel.component.scss
+++ b/src/app/Components/carousel/carousel.component.scss
@@ -44,11 +44,11 @@ ngb-carousel {
     z-index: 20;
 }
 
-.btn-formulario {
+.btn-formulario-nuevo {
     text-align: center;
     margin-top: 2%;
     background-color: #ffe5d5bf;
-    margin-left: 38%;
+    margin-left: 23%;
     padding: auto;
     width: 25%;
     transition: 1.5s ease-in-out;
@@ -57,9 +57,28 @@ ngb-carousel {
 
 }
 
-.btn-formulario:hover {
-    background-color: rgb(219, 198, 152);
-    transform: scale(1.3);
+.btn-formulario-existente {
+    text-align: center;
+    margin-top: 2%;
+    background-color: #ffe5d5bf;
+    margin-left: 3%;
+    padding: auto;
+    width: 25%;
+    transition: 1.5s ease-in-out;
+    transition-property: background-color, transform;
+    transition-duration: 500ms, 500ms;
+
+}
+
+
+.btn-formulario-nuevo:hover {
+    background-color: rgb(236, 250, 114);
+    transform: scale(1.2);
+}
+
+.btn-formulario-existente:hover {
+    background-color: rgb(231, 128, 245);
+    transform: scale(1.2);
 }
 
 
