--- a/src/app/Components/formulario/formulario.component.html
+++ b/src/app/Components/formulario/formulario.component.html
@@ -27,19 +27,30 @@
       </mat-form-field>
 
       <mat-form-field class="item">
+        <mat-label>Número Documento</mat-label>
+        <input matInput type="number" formControlName="nroDocumento" required>
+      </mat-form-field>
+
+      <mat-form-field class="item">
         <mat-label>Fecha Desde</mat-label>
-        <input matInput type="date" formControlName="fechaDesde" required>
+        <input matInput type="date" formControlName="fechaDesde" required (change)="calcularSubTotal()">
       </mat-form-field>
 
       <mat-form-field class="item">
         <mat-label>Fecha Hasta</mat-label>
-        <input matInput type="date" formControlName="fechaHasta" required>
+        <input matInput type="date" formControlName="fechaHasta" required (change)="calcularSubTotal()">
       </mat-form-field>
 
-      <mat-form-field>
+      <mat-form-field class="item">
         <mat-label>Cantidad Ocupantes</mat-label>
-        <input matInput type="number" formControlName="cantidadPersonas" required>
+        <input matInput type="number" formControlName="cantidadPersonas" required (change)="calcularSubTotal()">
       </mat-form-field>
+
+      <mat-form-field class="item">
+        <mat-label>Total Aproximado</mat-label>
+        <input matInput type="number" formControlName="total" />
+      </mat-form-field>
+
 
     </div>
 
