--- a/src/app/Components/detalle-reserva/detalle-reserva.component.html
+++ b/src/app/Components/detalle-reserva/detalle-reserva.component.html
@@ -11,7 +11,7 @@
                 <mat-list-item>
                     <h3 matLine>Titular de Reserva: {{solicitudReserva.cliente.nombre}}
                         {{solicitudReserva.cliente.apellidos}}</h3>
-                    <h3 matLine>Cantidad de Personas: {{solicitudReserva.cantidadPersonas}}</h3>
+                    <h3 matLine>Cantidad de Personas: {{solicitudReserva.cantOcupantes}}</h3>
                     <h3 matLine>Fecha Desde: {{solicitudReserva.fechaDesde | date:'dd/MM/yyyy'}}</h3>
                     <h3 matLine>Fecha Hasta: {{solicitudReserva.fechaHasta | date:'dd/MM/yyyy'}}</h3>
                     <h3 matLine>Estado: {{solicitudReserva.estado.descripcion}}</h3>
