--- a/src/app/Components/carousel/carousel.component.html
+++ b/src/app/Components/carousel/carousel.component.html
@@ -2,7 +2,7 @@
   [pauseOnHover]="true" [wrap]="true" [activeId]="'firstSlide'">
   <ng-template ngbSlide id="firstSlide">
     <div>
-      <img class="d-block w-100" src="assets/cabana1.jpg" alt="Imagen 1">
+      <img class="w-100" src="assets/cabana1.jpg" alt="Imagen 1">
     </div>
     <div class="carousel-caption">
       <h1>Disfruta de la tranquilidad de nuestro complejo</h1>
@@ -10,7 +10,7 @@
   </ng-template>
   <ng-template ngbSlide id="secondSlide">
     <div>
-      <img class="d-block w-100" src="assets/cabana2.jpg" alt="Imagen 2">
+      <img class="w-100" src="assets/cabana2.jpg" alt="Imagen 2">
     </div>
     <div class="carousel-caption">
       <h1>Ubicado en la mejor zona de las sierras chicas</h1>
@@ -18,12 +18,12 @@
   </ng-template>
   <ng-template ngbSlide id="thirstSlide">
     <div class="picsum-img-wrapper">
-      <img class="d-block w-100" src="assets/cabana3.jpg" alt="Imagen 3">
+      <img class="w-100" src="assets/cabana3.jpg" alt="Imagen 3">
     </div>
   </ng-template>
   <ng-template ngbSlide id="forthSlide">
     <div class="picsum-img-wrapper">
-      <img class="d-block w-100" src="assets/cabana4.jpg" alt="Imagen 4">
+      <img class="w-100" src="assets/cabana4.jpg" alt="Imagen 4">
     </div>
   </ng-template>
 </ngb-carousel>
