--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
+html,
+body {
+    height: 100%;
+}
 
-html, body { height: 100%; background-color: #cfd68f }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-image: url('./assets/background.jpg');
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
